# rag-python-supabase

./: .env.example  README.md  main.py  pyproject.toml  quick_test.py  streamlit_app.py
data/: sample-docs.txt
scripts/setup/: auto_setup_database.py
scripts/tests/: verify_system.py
src/: __init__.py
src/database/: supabase_manager.py  table.sql
src/embeddings/: __init__.py  embedding_manager.py
src/rag/: rag_system.py
